css/searchPanes.semanticui.css
/* ... */
div.dtsp-topRow button.dtsp-collapseButton span.dtsp-caret {
  position: relative;
  top: 2px;
  display: inline-block;
}
div.dtsp-topRow button.dtsp-collapseButton.dtsp-rotated {
  transform: rotate(180deg);
}

div.dtsp-topRow.dtsp-bordered {
  border: 2px solid #f0f0f0;
  border-radius: 3px;
}

div.dtsp-topRow.dtsp-bordered:hover {
  background-color: #f0f0f0;
  opacity: 0.6;
  border: 2px solid #cfcfcf;
  border-radius: 3px;
  cursor: pointer !important;
}

div.dtsp-panesContainer div.dtsp-searchPanes div.dtsp-searchPane table thead th,
div.dtsp-panesContainer div.dtsp-searchPanes div.dtsp-searchPane table thead td {
  width: 100% !important;
}

div.dt-button-collection {
  z-index: 2002;
}

div.dtsp-columns-1 {
  max-width: 100%;
  margin: 0px !important;
}

div.dtsp-columns-2 {
  max-width: 49%;
  margin: 0px !important;
}

div.dtsp-columns-3 {
  max-width: 32%;
  margin: 0px !important;
}

div.dtsp-columns-4 {
  max-width: 24%;
  margin: 0px !important;
}

div.dtsp-columns-5 {
  max-width: 19%;
  margin: 0px !important;
}

div.dtsp-columns-6 {
  max-width: 16%;
  margin: 0px !important;
}

div.dtsp-columns-7 {
  max-width: 14%;
  margin: 0px !important;
}

div.dtsp-columns-8 {
  min-width: 12%;
  margin: 0px !important;
}

div.dtsp-columns-9 {
  max-width: 10.5%;
  margin: 0px !important;
}

div.dt-button-collection {
  float: none;
}

div.dtsp-panesContainer {
  margin-bottom: 1em;
}
div.dtsp-panesContainer div.dataTables_wrapper {
  width: 100%;
}
div.dtsp-panesContainer div.dataTables_wrapper div.dataTables_layout_cell {
  padding: 0;
}
div.dtsp-panesContainer div.dataTables_wrapper div.dataTables_scrollHead {
  display: none !important;
}
div.dtsp-panesContainer div.dataTables_wrapper div.dataTables_scrollBody {
  background: white !important;
  border-bottom: none;
}
div.dtsp-panesContainer div.dataTables_wrapper div.dataTables_scrollBody thead {
  display: none;
}
div.dtsp-panesContainer div.dataTables_wrapper div.dataTables_scrollBody table {
  table-layout: fixed;
}
div.dtsp-panesContainer div.dataTables_wrapper div.dataTables_scrollBody table tr > th,
div.dtsp-panesContainer div.dataTables_wrapper div.dataTables_scrollBody table tr > td {
  padding: 5px 10px;
}
div.dtsp-panesContainer div.dataTables_wrapper div.dataTables_scrollBody td.dtsp-nameColumn {
  width: 100% !important;
}
div.dtsp-panesContainer div.dataTables_wrapper div.dataTables_scrollBody div.dtsp-nameCont {
  width: 100%;
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  align-content: flex-start;
  align-items: flex-start;
}
div.dtsp-panesContainer div.dataTables_wrapper div.dataTables_scrollBody div.dtsp-nameCont span.dtsp-name,
div.dtsp-panesContainer div.dataTables_wrapper div.dataTables_scrollBody div.dtsp-nameCont span.dtsp-pill {
  cursor: default;
}
div.dtsp-panesContainer div.dataTables_wrapper div.dataTables_scrollBody div.dtsp-nameCont span.dtsp-name {
  text-overflow: ellipsis;
  overflow: hidden;
  display: inline-block;
  vertical-align: middle;
  white-space: nowrap;
  flex-grow: 1;
}
div.dtsp-panesContainer div.dataTables_wrapper div.dataTables_scrollBody div.dtsp-nameCont span.dtsp-pill {
  display: inline-block;
  background-color: #cfcfcf;
  text-align: center;
  border: 1px solid #cfcfcf;
  border-radius: 10px;
  width: auto;
  min-width: 30px;
  color: black;
  font-size: 0.9em;
  padding: 0 4px;
}
div.dtsp-panesContainer div.dataTables_wrapper div.dataTables_scrollBody div.dtsp-nameCont span.dtsp-pill:empty {
  display: none;
}

div.dtsp-panesContainer {
  clear: both;
  padding-left: 0;
  padding-right: 0;
  text-align: center;
}
div.dtsp-panesContainer div.dtsp-searchPanes {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-between;
  align-content: flex-start;
  align-items: stretch;
  clear: both;
  text-align: left;
}
div.dtsp-panesContainer div.dtsp-searchPanes div.dtsp-searchPane {
  flex-grow: 1;
  flex-shrink: 0;
  font-size: 0.9em;
  margin-top: 15px !important;
}
div.dtsp-panesContainer div.dtsp-searchPanes div.dtsp-searchPane div.dataTables_wrapper {
  flex: 1;
  box-sizing: border-box;
}
div.dtsp-panesContainer div.dtsp-searchPanes div.dtsp-searchPane div.dataTables_wrapper div.dataTables_filter {
  display: none;
}
div.dtsp-panesContainer div.dtsp-title {
  float: left;
  padding: 10px 0;
}
div.dtsp-panesContainer button.dtsp-clearAll,
div.dtsp-panesContainer button.dtsp-collapseAll,
div.dtsp-panesContainer button.dtsp-showAll {
  float: right;
  padding: 10px;
}

div.dtsp-hidden {
  display: none !important;
}

div.dtsp-searchPane div.dtsp-topRow {
  margin: 0.5em 0;
}
div.dtsp-searchPane div.dtsp-topRow div.dtsp-subRow2 {
  margin-left: 0.5em;
}
div.dtsp-searchPane div.dtsp-topRow input {
  min-height: 37px;
}
div.dtsp-searchPane div.dtsp-topRow button {
  border: 1px solid #ced4da;
}
div.dtsp-searchPane div.dtsp-topRow i.search {
  position: absolute;
  top: 7px;
  right: 3px;
  bottom: 0;
}
div.dtsp-searchPane div.dtsp-topRow span.dtsp-caret {
  top: 4px;
  right: 4px;
}
div.dtsp-searchPane div.dtsp-topRow button.dtsp-collapseButton {
  max-width: 44px;
}
div.dtsp-searchPane div.dtsp-topRow button.dtsp-rotated {
  transform: none;
}
div.dtsp-searchPane div.dtsp-topRow button.dtsp-rotated span {
  transform: rotate(180deg);
  top: -1px;
}
div.dtsp-searchPane div.dtsp-topRow button.clearButton,
div.dtsp-searchPane div.dtsp-topRow button.dtsp-searchIcon,
div.dtsp-searchPane div.dtsp-topRow button.dtsp-nameButton,
div.dtsp-searchPane div.dtsp-topRow button.dtsp-countButton,
div.dtsp-searchPane div.dtsp-topRow button.dtsp-collapseButton {
  background-color: transparent;
  width: 44px;
  height: 38px;
  font-size: 14px;
  cursor: pointer;
}
div.dtsp-searchPane div.dtsp-topRow button.disabled {
  cursor: default;
}
div.dtsp-searchPane div.dtsp-topRow.dtsp-bordered:hover button.disabled {
  cursor: pointer !important;
  pointer-events: none;
}
/* ... */

